--- a/unitree_g1/rl_policies/g1_29dof_rev_1_0.yaml
+++ b/unitree_g1/rl_policies/g1_29dof_rev_1_0.yaml
@@ -55,7 +55,8 @@ mjw_joint_names:
   - "right_wrist_yaw_joint"
 
 # default joint pos
-mjw_init_pos: [0.0, -1.5, 0.8]
+mjw_init_pos: [0.0, -1.0, 0.8]
+mjw_init_quat: [0.0, 0.0, 0.7071, 0.7071]
 mjw_joint_pos: [
   -0.2, 0.0, 0.0, 0.42, -0.23, 0.0, 
   -0.2, 0.0, 0.0, 0.42, -0.23, 0.0, 
