--- a/unitree_g1/rl_policies/g1_29dof_rev_1_0.yaml
+++ b/unitree_g1/rl_policies/g1_29dof_rev_1_0.yaml
@@ -2,7 +2,7 @@
 robot: "g1"
 
 # sim asset 
-asset_path: "mjcf/g1_29dof_box_foot.xml"
+asset_path: "mjcf/g1_29dof_rev_1_0_box_foot.xml"
 
 # policy 
 policy_path: "rl_policies/g1_29DOF_sand.pt" # trained with hydro-elastic contact model
